[gd_scene load_steps=5 format=3 uid="uid://c7x4io68lfgml"]

[ext_resource type="Script" path="res://scenes/common/base_level.gd" id="1_swcu4"]
[ext_resource type="PackedScene" uid="uid://chk3bcl33jjts" path="res://scenes/common/drone.tscn" id="2_a1vfu"]
[ext_resource type="PackedScene" uid="uid://dt1gq4g3p6i43" path="res://scenes/levels/level_veins_2.tscn" id="2_i8yu5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d3brj"]
bg_color = Color(0.6, 0.6, 0.6, 0.14902)

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_swcu4")
debug_level_scene = ExtResource("2_i8yu5")

[node name="Background" type="ColorRect" parent="."]
offset_left = -2761.0
offset_top = -2478.0
offset_right = 7655.0
offset_bottom = 4241.0
color = Color(0.0705882, 0.00392157, 0.00392157, 1)

[node name="Drone" parent="." instance=ExtResource("2_a1vfu")]
position = Vector2(0, 0)
sleeping = true

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="EnergyBar" type="ProgressBar" parent="GameUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -53.0
offset_right = 471.0
offset_bottom = 17.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
theme_override_styles/fill = SubResource("StyleBoxFlat_d3brj")
allow_greater = true

[node name="Time" type="Label" parent="GameUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -47.0
offset_right = 64.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 8
text = "0:00"

[connection signal="over_field" from="Drone" to="." method="_on_drone_over_field"]
